--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,7 +57,7 @@ body {
 }
 @import "header";
 @import "get-started";
-//@import "";
+@import "stay-safe";
 //@import "";
 //@import "";
 //@import "";
