стили для первого блока секции experts

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,8 +58,8 @@ body {
 @import "header";
 @import "get-started";
 @import "stay-safe";
-//@import "";
-//@import "";
+@import "experts";
+
 //@import "";
 //@import "";
 @import "media";
