--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -180,6 +180,25 @@
 			padding-bottom: 100px;
 		}
 	}
+	.experts {
+		padding: 80px 0 30px 0;
+		&__body {
+			display: block;
+		}
+		&__content {
+			flex: 0 1 100%;
+			padding: 0 0 35px 0;
+		}
+		&__block-text {
+			max-width: 100%;
+		}
+		&__video {
+			padding: 0 0 48% 0;
+		}
+	}
+	.body-statistics-experts {
+		padding: 20px 30px;
+	}
 }
 /*mobile small*/
 @media (max-width: 479.98px) {
@@ -191,5 +210,11 @@
 	}
 	.media-stay-safe {
 		max-width: 290px;
+	}
+	.body-statistics-experts {
+		flex-direction: column;
+		&__item:not(:last-child) {
+			margin: 0 0 15px 0;
+		}
 	}
 }
