--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,11 +55,48 @@ body {
 		}
 	}
 }
+/*=================================*/
+/*общий блок
+/*=================================*/
+.block-text {
+	&__title {
+		font-weight: bold;
+		font-size: 44px;
+		line-height: 126%;
+
+		&:not(:last-child) {
+			margin: 0 0 12px 0;
+		}
+		span {
+			color: #ec5863;
+		}
+		&_blue {
+			span {
+				color: #4285f4;
+			}
+		}
+	}
+
+	&__text {
+		line-height: 138.5%;
+		letter-spacing: 0.08em;
+		&:not(:last-child) {
+			margin: 0 0 24px 0;
+		}
+	}
+	&-center {
+		text-align: center;
+	}
+	&-mw {
+		max-width: 620px;
+		margin: 0 auto;
+	}
+}
+/*=================================*/
 @import "header";
 @import "get-started";
 @import "stay-safe";
 @import "experts";
-
-//@import "";
+@import "_halthcare";
 //@import "";
 @import "media";
