--- a/scss/_halthcare.scss
+++ b/scss/_halthcare.scss
@@ -8,6 +8,7 @@
 	}
 	&__items {
 		display: flex;
+
 		//	margin: 0 -36px;
 	}
 	&__column {
@@ -81,6 +82,7 @@
 	box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
 	border-radius: 8px;
 	display: flex;
+	min-height: 100%;
 	align-items: center;
 	text-align: center;
 	flex-direction: column;
